# loom

./: .gitignore  README.md  index.html  knip.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: preflight.cjs
src/: App.tsx  preload.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fs_ops.rs  lib.rs  main.rs  path_resolver.rs  terminal.rs  watcher.rs
src/bridge/: tauriApi.ts
src/components/CommandPalette/: CommandPalette.tsx
src/components/Compose/: ComposeHero.tsx
src/components/Dashboard/: Dashboard.tsx
src/components/Layout/: Layout.tsx  MoveToApplicationsBanner.tsx  Sidebar.tsx  TabBar.tsx  ThemeSwitcher.tsx
src/components/ProjectList/: ProjectList.tsx
src/components/SessionViewer/: SessionListView.tsx  SessionPreview.tsx  SessionViewer.tsx
src/components/Settings/: SettingsModal.tsx
src/renderer/: main.tsx
src/store/: appStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: formatters.ts  launchSession.ts  projectHue.ts  projectPathUtils.ts
