[package]
name = "loom"
version = "1.0.5"
description = "Loom — a desktop workspace for your Claude Code CLI sessions."
authors = ["Nitin Jain"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "loom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = { version = "0.4", default-features = false }
trash = "5"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
